0.Basic_container_API/chucksays-api/k8s_resources/chuck-says-api-service-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: chuck-says-api
  name: chuck-says-api-lb
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: chuck-says-api
status:
  loadBalancer: {}
